force-app/main/default/objects/Example__c/Example__c.object-meta.xml
<CustomObject>
    <label>Example</label>
    <nameField>
        <displayFormat>E-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Examples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>