force-app/main/default/objects/Example__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The example may optionally be associated with an account.</description>
    <inlineHelpText>The example may optionally be associated with an account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Examples</relationshipLabel>
    <relationshipName>Examples</relationshipName>
    <type>Lookup</type>
</CustomField>