force-app/main/default/objects/Example__c/fields/Datetime__c.field-meta.xml
<CustomField>
    <fullName>Datetime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The date and time for the example.</description>
    <inlineHelpText>The date and time for the example.</inlineHelpText>
    <label>Date and Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>