force-app/main/default/objects/Example__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The example&apos;s description.</description>
    <inlineHelpText>The example&apos;s description.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>