force-app/main/default/objects/Example__c/fields/StateProcessingLastPerformed__c.field-meta.xml
<CustomField>
    <fullName>StateProcessingLastPerformed__c</fullName>
    <description>This should be set to &quot;now&quot; when State processing is performed.</description>
    <inlineHelpText>This should be set to &quot;now&quot; when State processing is performed.</inlineHelpText>
    <label>State Processing Last Performed</label>
    <type>DateTime</type>
</CustomField>