force-app/main/default/objects/Example__c/fields/StateProcessingLastRequired__c.field-meta.xml
<CustomField>
    <fullName>StateProcessingLastRequired__c</fullName>
    <description>This should be set to &quot;now&quot; when State processing is required.</description>
    <inlineHelpText>This should be set to &quot;now&quot; when State processing is required.</inlineHelpText>
    <label>State Processing Last Required</label>
    <type>DateTime</type>
</CustomField>