force-app/main/default/objects/Example__c/fields/StateProcessingRequired__c.field-meta.xml
<CustomField>
    <fullName>StateProcessingRequired__c</fullName>
    <formula>NOT(ISBLANK(StateProcessingLastRequired__c)) &amp;&amp; (ISBLANK(StateProcessingLastPerformed__c) || StateProcessingLastPerformed__c &lt;= StateProcessingLastRequired__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Processing Required</label>
    <type>Checkbox</type>
</CustomField>